# quickbam

./: .gitignore  .gitlab-ci.yml  .syntastic_cpp_config  LICENSE  Makefile.am  README.md  configure.ac  git-version
code_examples/: .syntastic_cpp_config  Makefile.am  flagstats-mmbam.cc  flagstats-quickbam.cc  readcount-mmbam.cc  readcount-quickbam.cc  snp-pileup-mmbam.cc  snp-pileup-quickbam.cc
docs/: Doxyfile.in  Makefile.in  api.rst  conf.py.in  getting_started.rst  index.rst  parallel.rst
src/: Makefile.am  bam.cc  index.cc  mbgzf.cc  mbgzf.h  mpileup.cc
src/mmbam/: bam.h  mbgzf.h  mfile.h  mpileup.h  slicer.h
src/quickbam/: bam.h  index.h  mbgzf.h  mfile.h  mpileup.h  nfo_iterator.h  slicer.h
test/: Makefile.am  bam_test.cc  index_test.cc  mbgzf_test.cc  mfile_test.cc  mpileup_test.cc
unmapped/: main.cc
